--- a/src/main/resources/com/nightbreeze/character-stats.fxml
+++ b/src/main/resources/com/nightbreeze/character-stats.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="360.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nightbreeze.controller.characterCreation.CharacterStatsController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nightbreeze.controller.characterCreation.CharacterStatsController">
    <children>
-      <VBox alignment="CENTER" prefHeight="360.0" prefWidth="600.0">
+      <VBox alignment="CENTER" prefHeight="720.0" prefWidth="1080.0">
          <children>
             <Label text="Statistics">
                <font>
@@ -74,7 +74,7 @@
                               <Insets bottom="5.0" top="5.0" />
                            </VBox.margin>
                         </TextField>
-                        <TextField fx:id="inteligenceTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="100.0">
+                        <TextField fx:id="intelligenceTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="100.0">
                            <VBox.margin>
                               <Insets bottom="5.0" top="5.0" />
                            </VBox.margin>
@@ -142,7 +142,7 @@
                               <Insets bottom="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="inteligenceBonusLabel" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="160.0" text="Current Bonus:">
+                        <Label fx:id="intelligenceBonusLabel" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="160.0" text="Current Bonus:">
                            <VBox.margin>
                               <Insets bottom="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
