--- a/src/main/resources/com/nightbreeze/character-display.fxml
+++ b/src/main/resources/com/nightbreeze/character-display.fxml
@@ -1,8 +1,196 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nightbreeze.controller.characterDisplay.CharacterDisplayController">
-
-</AnchorPane>
+<VBox prefHeight="750.0" prefWidth="800.0" spacing="15.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nightbreeze.controller.characterDisplay.CharacterDisplayController">
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
+    <children>
+        <HBox alignment="CENTER_LEFT" spacing="10.0">
+            <children>
+                <Label fx:id="characterNameLabel" text="Character Name">
+                    <font>
+                        <Font name="System Bold" size="36.0" />
+                    </font>
+                </Label>
+                <Label fx:id="raceClassLevelLabel" text="(Race | Class | Level)" textFill="gray">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Label>
+            </children>
+        </HBox>
+        <VBox spacing="5.0">
+            <children>
+                <Label fx:id="hpLabel" text="HP: 10 / 10" />
+                <ProgressBar fx:id="hpProgressBar" prefWidth="250.0" progress="1.0" />
+            <Label text="XP: 0 / 300" fx:id="xpLabel1" />
+                    <ProgressBar prefWidth="250.0" progress="0.0" fx:id="xpProgressBar" />
+            </children>
+            <VBox.margin>
+                <Insets bottom="10.0" />
+            </VBox.margin>
+        </VBox>
+        <GridPane hgap="10.0" vgap="10.0">
+            <children>
+                <VBox alignment="CENTER" style="-fx-border-color: lightgray; -fx-border-radius: 5; -fx-padding: 10;">
+                    <children>
+                        <Label text="Strength" />
+                        <Label fx:id="strScoreLabel" style="-fx-font-size: 24; -fx-font-weight: bold;" text="10" />
+                        <Label fx:id="strModifierLabel" style="-fx-font-size: 16;" text="+0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" style="-fx-border-color: lightgray; -fx-border-radius: 5; -fx-padding: 10;" GridPane.columnIndex="1">
+                    <children>
+                        <Label text="Dexterity" />
+                        <Label fx:id="dexScoreLabel" style="-fx-font-size: 24; -fx-font-weight: bold;" text="10" />
+                        <Label fx:id="dexModifierLabel" style="-fx-font-size: 16;" text="+0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" style="-fx-border-color: lightgray; -fx-border-radius: 5; -fx-padding: 10;" GridPane.columnIndex="2">
+                    <children>
+                        <Label text="Constitution" />
+                        <Label fx:id="conScoreLabel" style="-fx-font-size: 24; -fx-font-weight: bold;" text="10" />
+                        <Label fx:id="conModifierLabel" style="-fx-font-size: 16;" text="+0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" style="-fx-border-color: lightgray; -fx-border-radius: 5; -fx-padding: 10;" GridPane.columnIndex="3">
+                    <children>
+                        <Label text="Intelligence" />
+                        <Label fx:id="intScoreLabel" style="-fx-font-size: 24; -fx-font-weight: bold;" text="10" />
+                        <Label fx:id="intModifierLabel" style="-fx-font-size: 16;" text="+0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" style="-fx-border-color: lightgray; -fx-border-radius: 5; -fx-padding: 10;" GridPane.columnIndex="4">
+                    <children>
+                        <Label text="Wisdom" />
+                        <Label fx:id="wisScoreLabel" style="-fx-font-size: 24; -fx-font-weight: bold;" text="10" />
+                        <Label fx:id="wisModifierLabel" style="-fx-font-size: 16;" text="+0" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" style="-fx-border-color: lightgray; -fx-border-radius: 5; -fx-padding: 10;" GridPane.columnIndex="5">
+                    <children>
+                        <Label text="Charisma" />
+                        <Label fx:id="chaScoreLabel" style="-fx-font-size: 24; -fx-font--weight: bold;" text="10" />
+                        <Label fx:id="chaModifierLabel" style="-fx-font-size: 16;" text="+0" />
+                    </children>
+                </VBox>
+            </children>
+            <VBox.margin>
+                <Insets bottom="10.0" />
+            </VBox.margin>
+            <columnConstraints>
+                <ColumnConstraints />
+                <ColumnConstraints />
+                <ColumnConstraints />
+                <ColumnConstraints />
+                <ColumnConstraints />
+                <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints />
+            </rowConstraints>
+        </GridPane>
+        <FlowPane hgap="10.0" vgap="10.0">
+            <children>
+                <TitledPane animated="false" collapsible="false" text="Saving Throws">
+                    <content>
+                        <VBox fx:id="savingThrowsBox" spacing="5.0" />
+                    </content>
+                </TitledPane>
+                <TitledPane animated="false" collapsible="false" text="Armor">
+                    <content>
+                        <VBox fx:id="armorProficiencyBox" spacing="5.0" />
+                    </content>
+                </TitledPane>
+                <TitledPane animated="false" collapsible="false" text="Weapons">
+                    <content>
+                        <VBox fx:id="weaponProficiencyBox" spacing="5.0" />
+                    </content>
+                </TitledPane>
+                <TitledPane animated="false" collapsible="false" text="Tools">
+                    <content>
+                        <VBox fx:id="toolProficiencyBox" spacing="5.0" />
+                    </content>
+                </TitledPane>
+            </children>
+        </FlowPane>
+        <TitledPane animated="false" collapsible="false" text="Actions" VBox.vgrow="ALWAYS">
+            <content>
+                <GridPane hgap="15.0" vgap="10.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="350.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="350.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <children>
+                                <Label text="Heal:" />
+                                <TextField fx:id="healTextField" promptText="Amount" />
+                                <Button onAction="#handleHealButton" text="Apply" />
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.rowIndex="1">
+                            <children>
+                                <Label text="Damage:" />
+                                <TextField fx:id="damageTextField" promptText="Amount" />
+                                <Button onAction="#handleDamageButton" text="Apply" />
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.rowIndex="2">
+                            <children>
+                                <Label text="Temp HP:" />
+                                <TextField fx:id="tempHpTextField" promptText="Amount" />
+                                <Button onAction="#handleSetTempHpButton" text="Set" />
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1">
+                            <children>
+                                <Label text="Saving Throw:" />
+                                <ComboBox fx:id="savingThrowComboBox" prefWidth="100.0" promptText="Ability" />
+                                <Button onAction="#handleSavingThrowRollButton" text="Roll" />
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <children>
+                                <Label text="Attack Roll:" />
+                                <ComboBox fx:id="attackAbilityComboBox" prefWidth="100.0" promptText="Ability" />
+                                <Button onAction="#handleAttackRollButton" text="Roll" />
+                            </children>
+                        </HBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <children>
+                                <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                    <children>
+                                        <Label text="XP: 0 / 300" fx:id="xpLabel" />
+                                        <TextField prefWidth="80.0" promptText="Add XP" fx:id="xpTextField" />
+                                        <Button onAction="#handleAddXpButton" text="Add" />
+                                    </children>
+                                </HBox>
+                            </children>
+                        </VBox>
+                    </children>
+                </GridPane>
+            </content>
+        </TitledPane>
+    </children>
+</VBox>
